force-app/main/default/objects/Tegra_Embedded_Registration_Expirations__c/Tegra_Embedded_Registration_Expirations__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This will have the Threshold limit in days for the Registration Expiration and the Threshold limit in days for the Email Notification Reminders for the first, second and third.</description>
    <label>Tegra Embedded Registration Expirations</label>
</CustomObject>