force-app/main/default/objects/Tegra_Embedded_Registration_Expirations__c/fields/Default_Cc_Email_Ids__c.field-meta.xml
<CustomField>
    <fullName>Default_Cc_Email_Ids__c</fullName>
    <description>This Email Id&apos;s in this field will be added in the CC for the all the Email Notificaitons (1st, 2nd and 3rd)</description>
    <label>Default Cc Email Ids</label>
    <length>250</length>
    <type>Text</type>
</CustomField>