force-app/main/default/objects/Tegra_Embedded_Registration_Expirations__c/fields/Default_Oppty_Owner_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Default_Oppty_Owner_Email_Id__c</fullName>
    <description>This field will have the Email address of the User who will be the Default replaced owner in case of any inActive PBM.</description>
    <label>Default Oppty Owner Email Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>