force-app/main/default/objects/Tegra_Embedded_Registration_Expirations__c/fields/Default_Threshold_for_all_Partners__c.field-meta.xml
<CustomField>
    <fullName>Default_Threshold_for_all_Partners__c</fullName>
    <label>Default Threshold for all Partners</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>