force-app/main/default/objects/Tegra_Embedded_Registration_Expirations__c/fields/First_Reminder__c.field-meta.xml
<CustomField>
    <fullName>First_Reminder__c</fullName>
    <label>First Reminder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>