force-app/main/default/objects/Tegra_Embedded_Registration_Expirations__c/fields/Opportunity_Detail_Link_for_Partner_User__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Detail_Link_for_Partner_User__c</fullName>
    <description>This field will have the URL of Opportunity Detail Link for the Partner Users. This field is being used in the Email Templates for the &apos;Tegra Embedded Partner Opportunity&apos; Expirations project.</description>
    <label>Opportunity Detail Link for Partner User</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>