force-app/main/default/objects/Tegra_Embedded_Registration_Expirations__c/fields/Opportunity_Stages_to_Exclude__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stages_to_Exclude__c</fullName>
    <description>This field will have the StageNames of the Opportunities those should be excluded from Expiration process.</description>
    <label>Opportunity Stages to Exclude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>