force-app/main/default/objects/Tegra_Embedded_Registration_Expirations__c/fields/OWD_Sender_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>OWD_Sender_Email_Address__c</fullName>
    <description>This field have the OWD Email Address, which will be used as a Sender</description>
    <label>OWD - Sender Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>