force-app/main/default/objects/Tegra_Embedded_Registration_Expirations__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SETUP_TYPE</columns>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>NAME</columns>
    <columns>Default_Threshold_for_all_Partners__c</columns>
    <columns>First_Reminder__c</columns>
    <columns>Second_Reminder__c</columns>
    <columns>Third_Reminder__c</columns>
    <columns>Default_Oppty_Owner_Email_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>